--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,27 +1,57 @@
+!!!
 %html
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
   %body
     %h1 User choice
-    %ol
-      %a{:href => '?choice=rock'} Rock
-      %a{:href => '?choice=paper'} Paper
-      %a{:href => '?choice=scissors'} Scissors
+    -if (do_it == 'Choose one')
+      %h2 Choose one
+      %ol
+        %a{:href => '?choice=rock'} Rock
+        %a{:href => '?choice=paper'} Paper
+        %a{:href => '?choice=scissors'} Scissors
 
     - if(player_throw == 'rock')
-      %img{:src => '../public/img/piedra.png', :alt => 'Rock'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
     - elsif (player_throw == 'scissors')
-      %img{:src => '../public/img/tijeras.png', :alt => 'Scissors'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
     - elsif (player_throw == 'paper')
-      %img{:src => '../public/img/papel.png', :alt => 'Paper'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
 
+    %h1 VS
     %h1 Computer Choice
 
     - if(computer_throw == 'rock')
-      %img{:src => '../public/img/piedra.png', :alt => 'Rock'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
     - elsif (computer_throw == 'scissors')
-      %img{:src => '../public/img/tijeras.png', :alt => 'Scissors'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
     - elsif (computer_throw == 'paper')
-      %img{:src => '../public/img/papel.png', :alt => 'Paper'}
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
+
+    %br
+    %h1 The Winner is:
+    -if (anwser == 'tied')
+      %h2 Empate!
+    -elsif (anwser == 'win')
+      %h2 The user win
+      - if(player_throw == 'rock')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+      - elsif (player_throw == 'scissors')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+      - elsif (player_throw == 'paper')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
+    -elsif (anwser == 'loose')
+      %h2 You loose!!!
+      - if(computer_throw == 'rock')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+      - elsif (computer_throw == 'scissors')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+      - elsif (computer_throw == 'paper')
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
+      -else
+        %h2 Play the game!!
+
+    %a{:href => '/'}Play Again?
+
     
-    %h3= anwser
+    
