--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -2,58 +2,69 @@
 %html
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
-    %link{:href => "public/css/bootstrap.css", :rel => "stylesheet"}
-    
+    %link{:href => "/public/css/bootstrap.css", :rel => "stylesheet"}
+    %link{:href => "/public/css/bootstrap-responsive.css", :rel => "stylesheet"}
+    %link{:href => "/public/css/style.css", :rel => "stylesheet"}
   %body
-    %script{:src => "public/js/bootstrap.js"}
-    
-    %h1 User choice
-    -if (do_it == 'Choose one')
-      %h2 Choose one
-      %ol
-        %a{:href => '?choice=rock'} Rock
-        %a{:href => '?choice=paper'} Paper
-        %a{:href => '?choice=scissors'} Scissors
+    .navbar.navbar-inverse.navbar-fixed-top
+      .navbar-inner
+        .container
+        %h1 Rock Paper Scissors
 
-    - if(player_throw == 'rock')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
-    - elsif (player_throw == 'scissors')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
-    - elsif (player_throw == 'paper')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
-
-    %h1 VS
-    %h1 Computer Choice
-
-    - if(computer_throw == 'rock')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
-    - elsif (computer_throw == 'scissors')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
-    - elsif (computer_throw == 'paper')
-      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
-
-    %br
-    %h1 Resultado: 
-    -if (anwser == 'tied')
-      %h2 Empate!
-    -elsif (anwser == 'win')
-      %h2 Ganaste!
+    .row.span1
+      %h1 User choice
+      -if (do_it == 'Choose one')
+        %h2 Choose one
+        %ol
+          %a{:href => '?choice=rock'} Rock
+          %a{:href => '?choice=paper'} Paper
+          %a{:href => '?choice=scissors'} Scissors
+    .row.span2
       - if(player_throw == 'rock')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
       - elsif (player_throw == 'scissors')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
       - elsif (player_throw == 'paper')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
-    -elsif (anwser == 'loose')
-      %h2 Perdiste!!!
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
+    .span1
+      %h1 VS
+    .span2
       - if(computer_throw == 'rock')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
       - elsif (computer_throw == 'scissors')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
       - elsif (computer_throw == 'paper')
-        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
-      -else
-        %h2 Empieza a jugar!!
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
+    .span2
+      %h1 Computer Choice
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
+      %br
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
+      %br
+      %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
 
-    %a{:href => '/'} Juega otra vez   
+      %br
+      %h1 Resultado: 
+      -if (anwser == 'tied')
+        %h2 Empate!
+      -elsif (anwser == 'win')
+        %h2 Ganaste!
+        - if(player_throw == 'rock')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+        - elsif (player_throw == 'scissors')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+        - elsif (player_throw == 'paper')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
+      -elsif (anwser == 'loose')
+        %h2 Perdiste!!!
+        - if(computer_throw == 'rock')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra_wins.jpg", :alt => 'Rock Wins'}
+        - elsif (computer_throw == 'scissors')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras_wins.jpg", :alt => 'Scissors Wins'}
+        - elsif (computer_throw == 'paper')
+          %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel_wins.jpg", :alt => 'Paper Wins'}
+        -else
+          %h2 Empieza a jugar!!
+
+      %a{:href => '/'} Juega otra vez   
     
