--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,4 +1,3 @@
-!!!
 %html
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
@@ -19,6 +18,13 @@
           %a{:href => '?choice=rock'} Rock
           %a{:href => '?choice=paper'} Paper
           %a{:href => '?choice=scissors'} Scissors
+      -else
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
+        %br
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
+        %br
+        %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
+
     .row.span2
       - if(player_throw == 'rock')
         %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
