--- a/views/index.html.haml
+++ b/views/index.html.haml
@@ -1,9 +1,9 @@
 %html
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
-    %link{:href => "/public/css/bootstrap.css", :rel => "stylesheet"}
-    %link{:href => "/public/css/bootstrap-responsive.css", :rel => "stylesheet"}
-    %link{:href => "/public/css/style.css", :rel => "stylesheet"}
+    %link{:href => "public/css/bootstrap.css", :rel => "stylesheet"}
+    %link{:href => "public/css/bootstrap-responsive.css", :rel => "stylesheet"}
+    %link{:href => "public/css/style.css", :rel => "stylesheet"}
   %body
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
@@ -24,7 +24,7 @@
         %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/tijeras.png", :alt => 'Scissors'}
         %br
         %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/papel.png", :alt => 'Paper'}
-
+        %br
     .row.span2
       - if(player_throw == 'rock')
         %img{:src => "http://banot.etsii.ull.es/alu4079/STYW/rps/piedra.png", :alt => 'Rock'}
