--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,29 @@
+
 h1{
-	color:red;
+	margin-left: 35%;
+	color: white;
 }
 
-img{
-	width :80px;
-	border: 2px;
+
+#cuerpo{
+	margin-top: 6%;
+}
+
+#cuerpo2{
+	margin-top: 10%;
+	margin-left: 5%;
+}
+#versus{
+
+	font-size: 6em;
+	font-weight: 2em;
+	margin-right: 10%;
+	margin-left: 30%;
+	margin-top: 20%;
+	margin-bottom: 10%;
+}
+
+
+#sol{
+	margin-bottom: 2%;
 }
